unified datasources for HF

--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -227,6 +227,9 @@ dedup = false
 metadataPrefix = marc21
 set = MZK03-VDK
 indexer_properties = mzk_marc.properties, marc.properties
+language_mapping = mzk_language.map
+format_mapping = mzk_format.map
+category_txtF_mapping = conspectus_category.map
 
 [hist_mzk_rajhrad]
 type = marc
@@ -235,7 +238,7 @@ repository_name = MZK03-RAJHRAD
 set = MZK03-RAJHRAD
 metadataPrefix = marc21
 format = hist_mzk_rajhrad
-idPrefix = hist_mzk_raj
+idPrefix = mzk_raj
 fileSplitter = AutoDetectFileSplitter.php
 recordTag = record
 recordXPath = //record
@@ -243,6 +246,9 @@ oaiIDXPath = //record
 institution = MZK-RAJHRAD
 dedup = false
 indexer_properties = mzk_marc.properties, marc.properties
+language_mapping = mzk_language.map
+format_mapping = mzk_format.map
+category_txtF_mapping = conspectus_category.map
 
 [hist_mzk_dacice]
 type = marc
@@ -251,14 +257,17 @@ repository_name = MZK03-DACICE
 set = MZK03-DACICE
 metadataPrefix = marc21
 format = hist_mzk_dacice
-idPrefix = hist_mzk_dac
+idPrefix = mzk_dac
 fileSplitter = AutoDetectFileSplitter.php
 recordTag = record
 recordXPath = //record
 oaiIDXPath = //record
 institution = MZK-DACICE
-dedup=false
+dedup = false
 indexer_properties = mzk_marc.properties, marc.properties
+language_mapping = mzk_language.map
+format_mapping = mzk_format.map
+category_txtF_mapping = conspectus_category.map
 
 [hist_mzk_znojmo]
 type = marc
@@ -267,7 +276,7 @@ repository_name = MZK03-ZNOJMO
 set = MZK03-ZNOJMO
 metadataPrefix = marc21
 format = hist_mzk_znojmo
-idPrefix = hist_mzk_zno
+idPrefix = mzk_zno
 fileSplitter = AutoDetectFileSplitter.php
 recordTag = record
 recordXPath = //record
@@ -275,6 +284,9 @@ oaiIDXPath = //record
 institution = MZK-ZNOJMO
 dedup = false
 indexer_properties = mzk_marc.properties, marc.properties
+language_mapping = mzk_language.map
+format_mapping = mzk_format.map
+category_txtF_mapping = conspectus_category.map
 
 [hist_mzk_trebova]
 type = marc
@@ -283,7 +295,7 @@ repository_name = MZK03-TREBOVA
 set = MZK03-TREBOVA
 metadataPrefix = marc21
 format = hist_mzk_trebova
-idPrefix = hist_mzk_tre
+idPrefix = mzk_tre
 fileSplitter = AutoDetectFileSplitter.php
 recordTag = record
 recordXPath = //record
@@ -291,12 +303,14 @@ oaiIDXPath = //record
 institution = MZK-TREBOVA
 dedup = false
 indexer_properties = mzk_marc.properties, marc.properties
+language_mapping = mzk_language.map
+format_mapping = mzk_format.map
+category_txtF_mapping = conspectus_category.map
 
 [hist_cbvk]
 type = marc
 url = http://katalog.cbvk.cz/i2/i2.ws.oai.cls
 format = hist_cbvk
-;fileSplitter = BinaryMarcFileSplitter.php
 recordXPath = //record
 oaiIDXPath = //record
 institution = CBVK
@@ -304,6 +318,10 @@ dedup = false
 enableRecordCheck = false
 metadataPrefix = oai_marcxml
 set = MZK
+idPrefix = cbvk
+language_mapping = mzk_language.map
+format_mapping = mzk_format.map
+category_txtF_mapping = conspectus_category.map
 
 [hist_kkfb]
 type = marc
@@ -313,29 +331,40 @@ recordXPath = //record
 oaiIDXPath = //record
 institution = KKFB
 dedup = false
-enableRecordCheck = false
+idPrefix = kkfb
+language_mapping = mzk_language.map
+format_mapping = mzk_format.map
+category_txtF_mapping = conspectus_category.map
 
 [hist_nm]
 type = marc21
 format = hist_nm
-recordXPath = //record
-oaiIDXPath = //record
 institution = NM
-dedup = true
 enableRecordCheck = false
 inputLanguage = czech
 fileSplitter = EncodingDetectFileSplitter.php
+idPrefix = nm
+dedup = false
+recordXPath = //record
+oaiIDXPath = //record
+language_mapping = mzk_language.map
+format_mapping = mzk_format.map
+category_txtF_mapping = conspectus_category.map
 
 
 [hist_knav]
 type = marc21
 format = hist_knav
-recordXPath = //record
-oaiIDXPath = //record
 institution = KNAV
-dedup = true
 enableRecordCheck = false
 fileSplitter = BinaryMarcFileSplitter.php
+idPrefix = knav
+dedup = false
+recordXPath = //record
+oaiIDXPath = //record
+language_mapping = mzk_language.map
+format_mapping = mzk_format.map
+category_txtF_mapping = conspectus_category.map
 
 [hist_mkp]
 type = marc
@@ -346,17 +375,63 @@ oaiIDXPath = //record
 institution = MKP
 metadataPrefix = marc21
 set = early
+idPrefix = mkp
+dedup = false
+language_mapping = mzk_language.map
+format_mapping = mzk_format.map
+category_txtF_mapping = conspectus_category.map
 
 [hist_mas]
 type = marc
-url = http://web2.mlp.cz/cgi/oai
 format = hist_mas
-recordXPath = //record
-oaiIDXPath = //record
 institution = MAS
-metadataPrefix = marc21
 fileSplitter = AutoDetectFileSplitter.php
 idPrefix = mas
+dedup = false
+recordXPath = //record
+oaiIDXPath = //record
+language_mapping = mzk_language.map
+format_mapping = mzk_format.map
+category_txtF_mapping = conspectus_category.map
+
+[hist_parl]
+type = marc
+format = hist_parl
+institution = PARL
+fileSplitter = AutoDetectFileSplitter.php
+idPrefix = parl
+dedup = false
+recordXPath = //record
+oaiIDXPath = //record
+language_mapping = mzk_language.map
+format_mapping = mzk_format.map
+category_txtF_mapping = conspectus_category.map
+
+[hist_muni]
+type = marc
+format = hist_muni
+institution = MUNI
+fileSplitter = AutoDetectFileSplitter.php
+idPrefix = muni
+dedup = false
+recordXPath = //record
+oaiIDXPath = //record
+language_mapping = mzk_language.map
+format_mapping = mzk_format.map
+category_txtF_mapping = conspectus_category.map
+
+[hist_mend]
+type = marc
+format = hist_mend
+institution = MEND
+fileSplitter = AutoDetectFileSplitter.php
+idPrefix = mend
+dedup = false
+recordXPath = //record
+oaiIDXPath = //record
+language_mapping = mzk_language.map
+format_mapping = mzk_format.map
+category_txtF_mapping = conspectus_category.map
 
 ;----------------- MZK -----------------
 ;Main bibliographical base
