filter english topic facets for MZK catalog

--- a/marc_mapping/mzk_marc.properties
+++ b/marc_mapping/mzk_marc.properties
@@ -26,3 +26,4 @@ sysno_str = custom, getSysno()
 publishDate = custom, getPublishDate()
 author_title_str = custom, getAuthorAndTitle()
 udc_str_mv = 080a
+topic_facet = custom, getTopicFacets()
