added basic MKT class for CPK

--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -609,12 +609,13 @@ format_mapping = mzk_format.map
 indexer_properties = marc.properties
 
 ;----------------- ncip2 integration tests ----------
-[mkt]
+[cpk_mkt]
 type = marc
 url = http://www.vkta.cz/carmentest/l.dll
-format = mkt
-idPrefix = MKT
+format = cpk_mkt
+idPrefix = TAG001
 fileSplitter = AutoDetectFileSplitter.php
+set = NKP
 recordTag = record
 recordXPath = //record
 oaiIDXPath = //record
