added hierarchical institutions for KJM

--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -45,6 +45,7 @@ dedup = true
 idPrefix = kjm
 url = http://katalog.kjm.cz/l.dll
 set = MZK
+institution_hierarchy = mappings/kjm_institution_mapping.ini
 metadataPrefix = marc21
 language_mapping = mzk_language.map
 format_mapping = mzk_format.map
