callnumber separation for MZK

--- a/marc_mapping/mzk_marc.properties
+++ b/marc_mapping/mzk_marc.properties
@@ -12,7 +12,8 @@ fulltext = custom, getFullText()
 topic = custom, getKeywords()
 relevancy_str = custom, getRelevancy()
 #scale_int_mv = custom, getScale()
-callnumber = 910b
+callnumber = custom, getCallNumbers()
+callnumber_str_mv = custom, getCallNumbers()
 callnumber_second_str_mv = custom, getSecondCallNumbers()
 #geo = custom, getBoundingBox()
 source = "MZK"
