cistbrno - fixed duplicities in format unification

--- a/mappings/cistbrno_format_unification.ini
+++ b/mappings/cistbrno_format_unification.ini
@@ -1,7 +1,7 @@
 # unification of formats for cistbrno,cistbrno_ rigth side will be used for deduplication
 
 #KJM
-AB = "cistbrno_analytical"
+AB = "cistbrno_analytical_entry"
 AH = "cistbrno_analytical_entry,cistbrno_musical_score"
 AK = "cistbrno_analytical_entry,cistbrno_books"
 AM = "cistbrno_analytical_entry"
@@ -10,7 +10,7 @@ AV = "cistbrno_audio_documents"
 BK = "cistbrno_books"
 BP = "cistbrno_books_in_braill"
 BR = "cistbrno_books"
-CD = "cistbrno_computer_files"
+CD = "cistbrno_electronic_resources"
 DH = "cistbrno_books"
 EK = "cistbrno_unspecified"
 HU = "cistbrno_musical_score"
@@ -45,7 +45,7 @@ Braille_007			= "cistbrno_books_in_braill"
 Filmstrip_007			= "cistbrno_visual_documents"
 Transparency_007		= "cistbrno_visual_documents"
 Slide_007			= "cistbrno_visual_documents"
-Microfilm_007			= "cistbrno_mikroform"
+Microfilm_007			= "cistbrno_mikroforms"
 
 Collage_007			= "cistbrno_visual_documents"
 Drawing_007			= "cistbrno_visual_documents"
