cistbrno - fixed typos in format unification

--- a/mappings/cistbrno_format_unification.ini
+++ b/mappings/cistbrno_format_unification.ini
@@ -45,7 +45,7 @@ Braille_007			= "cistbrno_books_in_braill"
 Filmstrip_007			= "cistbrno_visual_documents"
 Transparency_007		= "cistbrno_visual_documents"
 Slide_007			= "cistbrno_visual_documents"
-Microfilm_007			= "cistbrno_mikroforms"
+Microfilm_007			= "cistbrno_microforms"
 
 Collage_007			= "cistbrno_visual_documents"
 Drawing_007			= "cistbrno_visual_documents"
@@ -90,8 +90,7 @@ Photo_000_6			= "cistbrno_visual_documents"
 Electronic_000_6		= "cistbrno_electronic_resources"
 Kit_000_6			= "cistbrno_unspecified"
 PhysicalObject_000_6		= "cistbrno_unspecified"
-Manuscript_000_6		= "cistbrno_manuscrips,cistbrno_books"
-
+Manuscript_000_6		= "cistbrno_manuscripts,cistbrno_books"
 
 ;formats from field 000,cistbrno_ position 7
 eBook_000_7			= "cistbrno_books,cistbrno_electronic_resources"
