--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -49,6 +49,23 @@ metadataPrefix = marc21
 language_mapping = mzk_language.map
 category_txtF_mapping = conspectus_category.map
 
+[portal_kjmpe]
+type = marc
+format = portal_kjm
+fileSplitter = AutoDetectFileSplitter.php
+recordXPath = //record
+oaiIDXPath = //record
+institution = KJM
+dedup = true
+idPrefix = kjm
+url = http://katalog.kjm.cz/l.dll
+set = MZKPE
+enableRecordCheck = true
+institution_hierarchy = mappings/kjm_institution_mapping.ini
+metadataPrefix = marc21
+language_mapping = mzk_language.map
+category_txtF_mapping = conspectus_category.map
+
 [portal_vut]
 type = marc
 format = portal_vut
@@ -76,6 +93,9 @@ idPrefix = mend
 recordTag = record
 language_mapping = mzk_language.map
 category_txtF_mapping = conspectus_category.map
+status_map = mend_statuses.ini
+location_map = mend_locations.ini
+
 ;----------------- VNF sources -----------------
 
 [vnf_mkp]
@@ -89,8 +109,9 @@ metadataPrefix = marc21
 set = audio
 dedup = true
 language_mapping = mzk_language.map
-format_mapping = mzk_format.map
 category_txtF_mapping = conspectus_category.map
+fileSplitter = AutoDetectFileSplitter.php
+enableRecordCheck = true
 
 [vnf_nkp]
 type = marc
@@ -103,8 +124,9 @@ metadataPrefix = marc21
 set = NKC-AUDIO
 dedup = true
 language_mapping = mzk_language.map
-format_mapping = mzk_format.map
 category_txtF_mapping = conspectus_category.map
+fileSplitter = AutoDetectFileSplitter.php
+enableRecordCheck = true
 
 [vnf_mzk]
 type = marc
@@ -112,14 +134,13 @@ url = http://aleph.mzk.cz/OAI
 set = MZK01-VDK
 metadataPrefix = marc21
 format = vnf_mzk
-fileSplitter = BinaryMarcFileSplitter.php
+fileSplitter = AutoDetectFileSplitter.php
 recordXPath = //record
 oaiIDXPath = //record
 institution = MZK
 dedup = true
 enableRecordCheck = true
 language_mapping = mzk_language.map
-format_mapping = mzk_format.map
 category_txtF_mapping = conspectus_category.map
 
 [vnf_cbvk]
@@ -132,12 +153,12 @@ recordXPath = //record
 oaiIDXPath = //record
 institution = CBVK
 dedup = true
-enableRecordCheck = false
+enableRecordCheck = true
 set = MZK2
 metadataPrefix = oai_marcxml
 language_mapping = mzk_language.map
-format_mapping = mzk_format.map
 category_txtF_mapping = conspectus_category.map
+
 
 [vnf_ktn]
 type = marc21
@@ -146,11 +167,10 @@ recordXPath = //record
 oaiIDXPath = //record
 institution = KTN
 dedup = true
-enableRecordCheck = false
+enableRecordCheck = true
 fileSplitter = EncodingDetectFileSplitter.php
 inputLanguage = czech
 language_mapping = mzk_language.map
-format_mapping = mzk_format.map
 category_txtF_mapping = conspectus_category.map
 
 
@@ -168,7 +188,6 @@ enableRecordCheck = true
 set = VKOLOAI
 metadataPrefix = marc21
 language_mapping = mzk_language.map
-format_mapping = mzk_format.map
 category_txtF_mapping = conspectus_category.map
 
 [vnf_sup]
@@ -179,11 +198,10 @@ recordXPath = //record
 oaiIDXPath = //record
 institution = SUP
 dedup = true
-enableRecordCheck = false
+enableRecordCheck = true
 lineRecordLeader = LDR
 labelsDirectory = /data/supraphon-obalky
 language_mapping = mzk_language.map
-format_mapping = mzk_format.map
 category_txtF_mapping = conspectus_category.map
 
 [vnf_kkfb]
@@ -196,7 +214,6 @@ institution = KKFB
 dedup = true
 enableRecordCheck = false
 language_mapping = mzk_language.map
-format_mapping = mzk_format.map
 category_txtF_mapping = conspectus_category.map
 
 [vnf_svkk]
@@ -209,7 +226,6 @@ institution = SVKK
 dedup = true
 enableRecordCheck = false
 language_mapping = mzk_language.map
-format_mapping = mzk_format.map
 category_txtF_mapping = conspectus_category.map
 
 [vnf_kjm]
@@ -225,7 +241,6 @@ url = http://katalog.kjm.cz/l.dll
 set = MZK
 metadataPrefix = marc21
 language_mapping = mzk_language.map
-format_mapping = mzk_format.map
 category_txtF_mapping = conspectus_category.map
 
 ;----------------- Historicke fondy -----------------
