--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -18,6 +18,8 @@ dedup = true
 language_mapping = mzk_language.map
 category_txtF_mapping = conspectus_category.map
 indexer_properties = mzk_marc.properties, marc.properties
+996r_map = mzk_cistbrno_996r.ini
+996l_map = mzk_cistbrno_996l.ini
 
 
 [portal_muni]
