cistbrno - updated holding mapping

--- a/mappings/mzk_cistbrno_996r.ini
+++ b/mappings/mzk_cistbrno_996r.ini
@@ -32,3 +32,4 @@ TR4    = "Mimo MZK - nedostupné"
 TR5    = "Mimo MZK - nedostupné"
 TR6    = "Mimo MZK - nedostupné"
 VYS    = "Výstava"
+SKL    = "Sklad / do 1 hodiny"
