cistbrno - added mzk filtering

--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -15,6 +15,7 @@ oaiIDXPath = //record
 institution = MZK
 idPrefix = mzk
 dedup = true
+enableRecordCheck = true
 language_mapping = mzk_language.map
 category_txtF_mapping = conspectus_category.map
 indexer_properties = mzk_marc.properties, marc.properties
