upated deduplication format mapping

--- a/mappings/cistbrno_format_unification.ini
+++ b/mappings/cistbrno_format_unification.ini
@@ -78,7 +78,7 @@ Video_007			= "cistbrno_audiovisual_documents"
 
 
 ;formats from field 000,cistbrno_ position 6
-
+Book_000_6			= "cistbrno_books"
 MusicalScoreC_000_6		= "cistbrno_musical_score"
 MusicalScoreD_000_6		= "cistbrno_musical_score,cistbrno_manuscripts"
 MapE_000_6			= "cistbrno_maps"
