vnf - updated format unification

--- a/mappings/vnf_format_unification.ini
+++ b/mappings/vnf_format_unification.ini
@@ -87,7 +87,7 @@ Video_007			= "remove"
 
 
 ;formats from field 000,cistbrno_ position 6
-
+Book_000_6				="remove"
 MusicalScoreC_000_6		= "remove"
 MusicalScoreD_000_6		= "remove"
 MapE_000_6			= "remove"
