--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -246,6 +246,32 @@ metadataPrefix = marc21
 language_mapping = mzk_language.map
 category_txtF_mapping = conspectus_category.map
 
+[vnf_mkuo]
+type = marc
+format = vnf_mkuo
+recordXPath = //record
+oaiIDXPath = //record
+institution = MKUO
+dedup = true
+//enableRecordCheck = true
+url = http://www.knihovna-uo.cz/clavius/l.dll 
+set = FONO 
+metadataPrefix = marc21
+language_mapping = mzk_language.map
+category_txtF_mapping = conspectus_category.map
+
+[vnf_esta]
+fileSplitter = AutoDetectFileSplitter.php
+type = marc
+format = vnf_esta
+recordXPath = //record
+oaiIDXPath = //record
+institution = Diskografie
+dedup = true
+enableRecordCheck = false
+language_mapping = mzk_language.map
+category_txtF_mapping = conspectus_category.map
+
 ;----------------- Historicke fondy -----------------
 [hist_mzk]
 type = marc
