ignore formats EE and QQ from KJM

--- a/mappings/vnf_format_unification.ini
+++ b/mappings/vnf_format_unification.ini
@@ -12,12 +12,14 @@ BP = "remove"
 BR = "remove"
 CD = "vnf_computer_files"
 DH = "remove"
+EE = "remove"
 EK = "remove"
 HU = "remove"
 KN = "remove"
 MP = "remove"
 PE = "remove"
 PR = "remove"
+QQ = "remove"
 SK = "vnf_track"
 ZK = "vnf_audio_documents"
 
