CP prefix from KJM is removed

--- a/mappings/vnf_format_unification.ini
+++ b/mappings/vnf_format_unification.ini
@@ -10,7 +10,7 @@ AV = "vnf_audio_documents"
 BK = "remove"
 BP = "remove"
 BR = "remove"
-CD = "vnf_computer_files"
+CD = "remove"
 DH = "remove"
 EE = "remove"
 EK = "remove"
