--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -272,6 +272,20 @@ enableRecordCheck = false
 language_mapping = mzk_language.map
 category_txtF_mapping = conspectus_category.map
 
+[vnf_nm]
+fileSplitter = LineMarcFileSplitter.php
+lineRecordLeader = LDR
+;fileSplitter = AutoDetectFileSplitter.php
+type = marc
+format = vnf_nm
+recordXPath = //record
+oaiIDXPath = //record
+institution = NM
+dedup = true
+enableRecordCheck = false
+language_mapping = mzk_language.map
+category_txtF_mapping = conspectus_category.map
+
 ;----------------- Historicke fondy -----------------
 [hist_mzk]
 type = marc
