--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -286,6 +286,31 @@ enableRecordCheck = false
 language_mapping = mzk_language.map
 category_txtF_mapping = conspectus_category.map
 
+[vnf_kvkl]
+fileSplitter = AutoDetectFileSplitter.php
+type = marc
+format = vnf_kvkl
+recordXPath = //record
+oaiIDXPath = //record
+institution = KVKL
+dedup = true
+enableRecordCheck = false
+language_mapping = mzk_language.map
+category_txtF_mapping = conspectus_category.map
+
+[vnf_mkpr]
+fileSplitter = LineMarcFileSplitter.php
+lineRecordLeader = LDR
+type = marc
+format = vnf_mkpr
+recordXPath = //record
+oaiIDXPath = //record
+institution = MKPR
+dedup = true
+enableRecordCheck = false
+language_mapping = mzk_language.map
+category_txtF_mapping = conspectus_category.map
+
 ;----------------- Historicke fondy -----------------
 [hist_mzk]
 type = marc
