--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -311,6 +311,48 @@ enableRecordCheck = false
 language_mapping = mzk_language.map
 category_txtF_mapping = conspectus_category.map
 
+[vnf_kmhk]
+url = http://www.knihovnahk.cz/clavius/l.dll
+set = VNF
+metadataPrefix = marc21
+type = marc
+format = vnf_kmhk
+recordXPath = //record
+oaiIDXPath = //record
+institution = KMHK
+dedup = true
+enableRecordCheck = false
+language_mapping = mzk_language.map
+category_txtF_mapping = conspectus_category.map
+
+[vnf_mkkh]
+url = http://109.73.209.153/clavius/l.dll
+set = VNF
+metadataPrefix = marc21
+type = marc
+format = vnf_mkkh
+recordXPath = //record
+oaiIDXPath = //record
+institution = MKKH
+dedup = true
+enableRecordCheck = false
+language_mapping = mzk_language.map
+category_txtF_mapping = conspectus_category.map
+
+[vnf_kkvy]
+url = http://www.kkvysociny.cz/clavius/l.dll
+set = CPK
+metadataPrefix = marc21
+type = marc
+format = vnf_kkvy
+recordXPath = //record
+oaiIDXPath = //record
+institution = KKVY
+dedup = true
+enableRecordCheck = true
+language_mapping = mzk_language.map
+category_txtF_mapping = conspectus_category.map
+
 ;----------------- Historicke fondy -----------------
 [hist_mzk]
 type = marc
