added new source for fonoteka

--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -353,6 +353,19 @@ enableRecordCheck = true
 language_mapping = mzk_language.map
 category_txtF_mapping = conspectus_category.map
 
+[vnf_rad]
+type = marc21
+format = vnf_rad
+fileSplitter = AutoDetectFileSplitter.php
+recordXPath = //record
+oaiIDXPath = //record
+institution = RAD
+dedup = true
+enableRecordCheck = false
+lineRecordLeader = LDR
+language_mapping = mzk_language.map
+category_txtF_mapping = conspectus_category.map
+
 ;----------------- Historicke fondy -----------------
 [hist_mzk]
 type = marc
