added audioteka to fonoteka

--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -366,6 +366,19 @@ lineRecordLeader = LDR
 language_mapping = mzk_language.map
 category_txtF_mapping = conspectus_category.map
 
+[vnf_aud]
+type = marc21
+format = vnf_aud
+fileSplitter = AutoDetectFileSplitter.php
+recordXPath = //record
+oaiIDXPath = //record
+institution = AUD
+dedup = true
+enableRecordCheck = false
+lineRecordLeader = LDR
+language_mapping = mzk_language.map
+category_txtF_mapping = conspectus_category.map
+
 ;----------------- Historicke fondy -----------------
 [hist_mzk]
 type = marc
