--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -379,6 +379,20 @@ lineRecordLeader = LDR
 language_mapping = mzk_language.map
 category_txtF_mapping = conspectus_category.map
 
+[vnf_kmp]
+url =  http://lanius.kmp.plzen-city.cz/l.dll
+set = VNF
+metadataPrefix = marc21
+type = marc
+format = vnf_kmp
+recordXPath = //record
+oaiIDXPath = //record
+institution = KMP
+dedup = true
+enableRecordCheck = false
+language_mapping = mzk_language.map
+category_txtF_mapping = conspectus_category.map
+
 ;----------------- Historicke fondy -----------------
 [hist_mzk]
 type = marc
