--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -393,6 +393,19 @@ enableRecordCheck = false
 language_mapping = mzk_language.map
 category_txtF_mapping = conspectus_category.map
 
+[vnf_ct]
+type = marc21
+format = vnf_ct
+fileSplitter = AutoDetectFileSplitter.php
+recordXPath = //record
+oaiIDXPath = //record
+institution = CT
+dedup = true
+enableRecordCheck = false
+lineRecordLeader = LDR
+language_mapping = mzk_language.map
+category_txtF_mapping = conspectus_category.map
+
 ;----------------- Historicke fondy -----------------
 [hist_mzk]
 type = marc
