added SVKUL configuration

--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -406,6 +406,20 @@ lineRecordLeader = LDR
 language_mapping = mzk_language.map
 category_txtF_mapping = conspectus_category.map
 
+[vnf_svkul]
+url = http://katalog.svkul.cz/l.dll
+set = VNF
+metadataPrefix = marc21
+type = marc
+format = vnf_svkul
+recordXPath = //record
+oaiIDXPath = //record
+institution = SVKUL
+dedup = true
+enableRecordCheck = false
+language_mapping = mzk_language.map
+category_txtF_mapping = conspectus_category.map
+
 ;----------------- Historicke fondy -----------------
 [hist_mzk]
 type = marc
