--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -208,14 +208,18 @@ language_mapping = mzk_language.map
 category_txtF_mapping = conspectus_category.map
 
 [vnf_kkfb]
-type = marc21
+type = marc
+url = http://katalog.kfbz.cz/api/oai
 format = vnf_kkfb
+recordTag = record
 fileSplitter = AutoDetectFileSplitter.php
 recordXPath = //record
 oaiIDXPath = //record
 institution = KKFB
 dedup = true
 enableRecordCheck = false
+set = 28
+metadataPrefix = marc21
 language_mapping = mzk_language.map
 category_txtF_mapping = conspectus_category.map
 
