KKFB oai only for actualization

--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -209,7 +209,7 @@ category_txtF_mapping = conspectus_category.map
 
 [vnf_kkfb]
 type = marc
-url = http://katalog.kfbz.cz/api/oai
+url = http://katalog.kfbz.cz/api/oai // only actualization
 format = vnf_kkfb
 recordTag = record
 fileSplitter = AutoDetectFileSplitter.php
