--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -209,7 +209,8 @@ category_txtF_mapping = conspectus_category.map
 
 [vnf_kkfb]
 type = marc
-url = http://katalog.kfbz.cz/api/oai // only actualization
+; oai is only for actualization
+url = http://katalog.kfbz.cz/api/oai
 format = vnf_kkfb
 recordTag = record
 fileSplitter = AutoDetectFileSplitter.php
