--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -259,8 +259,8 @@ oaiIDXPath = //record
 institution = MKUO
 dedup = true
 //enableRecordCheck = true
-url = http://www.knihovna-uo.cz/clavius/l.dll 
-set = FONO 
+url = http://katalog-usti.knihovna-uo.cz/cgi-bin/koha/oai.pl
+set = VNF
 metadataPrefix = marc21
 language_mapping = mzk_language.map
 category_txtF_mapping = conspectus_category.map
