updated VNF_NM url, set

--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -279,7 +279,9 @@ category_txtF_mapping = conspectus_category.map
 
 [vnf_nm]
 fileSplitter = LineMarcFileSplitter.php
-lineRecordLeader = LDR
+url = http://opac.nm.cz/opaccmh/api/oai
+set = 0
+metadataPrefix = marc21
 ;fileSplitter = AutoDetectFileSplitter.php
 type = marc
 format = vnf_nm
@@ -287,7 +289,7 @@ recordXPath = //record
 oaiIDXPath = //record
 institution = NM
 dedup = true
-enableRecordCheck = false
+enableRecordCheck = true
 language_mapping = mzk_language.map
 category_txtF_mapping = conspectus_category.map
 
