--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -427,6 +427,20 @@ enableRecordCheck = false
 language_mapping = mzk_language.map
 category_txtF_mapping = conspectus_category.map
 
+[vnf_knkr]
+url = http://www.knihkm.cz/Clavius/l.dll
+set = AV
+metadataPrefix = marc21
+type = marc
+format = vnf_knkr
+recordXPath = //record
+oaiIDXPath = //record
+institution = KNKR
+dedup = true
+enableRecordCheck = false
+language_mapping = mzk_language.map
+category_txtF_mapping = conspectus_category.map
+
 ;----------------- Historicke fondy -----------------
 [hist_mzk]
 type = marc
