added OKPB configuration

--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -441,6 +441,20 @@ enableRecordCheck = false
 language_mapping = mzk_language.map
 category_txtF_mapping = conspectus_category.map
 
+[vnf_okpb]
+url = http://www.okpb.cz/clavius/l.dll
+set = VNP
+metadataPrefix = marc21
+type = marc
+format = vnf_okpb
+recordXPath = //record
+oaiIDXPath = //record
+institution = OKPB
+dedup = true
+enableRecordCheck = false
+language_mapping = mzk_language.map
+category_txtF_mapping = conspectus_category.map
+
 ;----------------- Historicke fondy -----------------
 [hist_mzk]
 type = marc
