remove cistbrno configs

--- a/mappings/vnf_format_unification.ini
+++ b/mappings/vnf_format_unification.ini
@@ -1,4 +1,4 @@
-# unification of formats for cistbrno,cistbrno_ rigth side will be used for deduplication
+# unification of formats for vnf,vnf_ rigth side will be used for deduplication
 
 #KJM
 AB = "remove"
@@ -89,7 +89,7 @@ VideoReel_007			= "remove"
 Video_007			= "remove"
 
 
-;formats from field 000,cistbrno_ position 6
+;formats from field 000,vnf_ position 6
 Book_000_6				="remove"
 MusicalScoreC_000_6		= "remove"
 MusicalScoreD_000_6		= "remove"
@@ -105,7 +105,7 @@ PhysicalObject_000_6		= "remove"
 Manuscript_000_6		= "remove"
 
 
-;formats from field 000,cistbrno_ position 7
+;formats from field 000,vnf_ position 7
 eBook_000_7			= "remove"
 Book_000_7			= "remove"
 
