--- a/conf/datasources.ini
+++ b/conf/datasources.ini
@@ -49,7 +49,7 @@ category_txtF_mapping = conspectus_category.map
 
 [vnf_cbvk]
 type = marc
-url = http://katalog.cbvk.cz/i2/i2.ws.oai.cls
+url = https://katalog.cbvk.cz/i2/i2.ws.oai.cls
 format = vnf_cbvk
 recordTag = record
 fileSplitter = AutoDetectFileSplitter.php
@@ -111,7 +111,7 @@ category_txtF_mapping = conspectus_category.map
 [vnf_kkfb]
 type = marc
 ; oai is only for actualization
-url = http://katalog.kfbz.cz/api/oai
+url = https://katalog.kfbz.cz/api/oai
 format = vnf_kkfb
 recordTag = record
 fileSplitter = AutoDetectFileSplitter.php
@@ -160,7 +160,7 @@ oaiIDXPath = //record
 institution = MKUO
 dedup = true
 //enableRecordCheck = true
-url = http://katalog-usti.knihovna-uo.cz/cgi-bin/koha/oai.pl
+url = https://katalog-usti.knihovna-uo.cz/cgi-bin/koha/oai.pl
 set = VNF
 metadataPrefix = marc21
 language_mapping = mzk_language.map
@@ -220,7 +220,7 @@ language_mapping = mzk_language.map
 category_txtF_mapping = conspectus_category.map
 
 [vnf_kmhk]
-url = http://www.knihovnahk.cz/clavius/l.dll
+url = https://katalog.kmhk.cz/clavius/l.dll
 set = VNF
 metadataPrefix = marc21
 type = marc
@@ -248,7 +248,7 @@ language_mapping = mzk_language.map
 category_txtF_mapping = conspectus_category.map
 
 [vnf_kkvy]
-url = http://www.kkvysociny.cz/clavius/l.dll
+url = https://katalog.kkvysociny.cz/clavius/l.dll
 set = CPK
 metadataPrefix = marc21
 type = marc
@@ -343,7 +343,7 @@ language_mapping = mzk_language.map
 category_txtF_mapping = conspectus_category.map
 
 [vnf_okpb]
-url = http://www.okpb.cz/clavius/l.dll
+url = https://www.okpb.cz/clavius/l.dll
 set = VNP
 metadataPrefix = marc21
 type = marc
